--- a/index.html
+++ b/index.html
@@ -1,69 +1,210 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <meta charset="utf-8" />
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Task Scoping</title>
         <script type="text/javascript" src="brython.js"></script>
         <script type="text/javascript" src="brython_stdlib.js"></script>
-        <script src="d3.js"></script>
-    </head>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.8.5/d3.min.js"></script>
+        <style>
+            body {
+                font-family: Arial, sans-serif;
+                margin: 0;
+                padding: 0;
+                background-color: white;
+                width: 100vw;
+                min-height: 100vh;
+            }
 
-    <body
-        onload="brython(1)"
-        style="
-            width: 100vw;
-            min-height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: flex-start;
-            flex-direction: column;
-            row-gap: 1rem;
-            padding: 1rem;
-            overflow-x: hidden;
-        "
-    >
+            h1,
+            h2,
+            h3,
+            h4,
+            h5,
+            h6,
+            p,
+            a {
+                margin: 0;
+                padding: 0;
+                font-size: 0.8rem;
+            }
+
+            .container {
+                width: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+            }
+
+            .controls {
+                width: 100%;
+                padding: 1rem 0;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                gap: 0.5rem;
+            }
+
+            .btn {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                background-color: oklch(62.3% 0.214 259.815);
+                color: white;
+                border: none;
+                padding: 0.5rem 1rem;
+                border-radius: 0.5rem;
+                cursor: pointer;
+                transition: all 0.3s ease;
+                box-shadow: 0 2px 10px rgba(102, 126, 234, 0.3);
+                text-decoration: none;
+            }
+
+            .btn:hover {
+                background-color: oklch(54.6% 0.245 262.881);
+            }
+
+            .btn:disabled {
+                background: #ccc;
+                cursor: not-allowed;
+                transform: none;
+                box-shadow: none;
+            }
+
+            .visualization-area {
+                padding: 1rem;
+                display: flex;
+                gap: 1rem;
+            }
+
+            .network-container {
+                flex: 1;
+                position: relative;
+            }
+
+            canvas {
+                border: 1px solid #e0e0e0;
+                border-radius: 0.5rem;
+                background: #fafafa;
+                box-shadow: inset 0 2px 10px rgba(0, 0, 0, 0.05);
+            }
+
+            .details-panel {
+                display: flex;
+                justify-content: start;
+                align-content: center;
+                flex-direction: column;
+                row-gap: 1rem;
+                width: 300px;
+                background: #fafafa;
+                border-radius: 0.5rem;
+                padding: 1rem;
+                border: 1px solid #e0e0e0;
+                overflow-y: auto;
+            }
+
+            .details-panel h3 {
+                width: 100%;
+                margin-top: 0;
+                color: #333;
+                border-bottom: 1px solid #667eea;
+            }
+
+            .textContainer {
+                width: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: start;
+                flex-direction: column;
+                row-gap: 0.2rem;
+            }
+
+            .grayText {
+                font-size: 0.8rem;
+                color: #666;
+            }
+        </style>
+    </head>
+    <body onload="brython(1)">
         <script type="text/python">
             import main
             main.main()
         </script>
-        <script type="module" src="main.js"></script>
+        <script src="main.js"></script>
+        <div class="container">
+            <div class="controls">
+                <input
+                    type="file"
+                    id="upload_file"
+                    class="btn"
+                    onchange="load()"
+                    accept=".sas"
+                />
+                <button id="enable_causal_links" class="btn">
+                    Enable Causal Links
+                </button>
+                <button id="enable_merging" class="btn">Enable Merging</button>
+                <button id="enable_fact_based" class="btn">
+                    Disable Fact-based
+                </button>
+                <button id="enable_forward_pass" class="btn">
+                    Enable Forward Pass
+                </button>
+                <button id="enable_loop" class="btn">Enable Loop</button>
+                <button
+                    class="btn"
+                    id="visualize_back"
+                    onclick="stepBack()"
+                    disabled
+                >
+                    &larr;
+                </button>
+                <button
+                    class="btn"
+                    id="visualize"
+                    onclick="stepForward()"
+                    disabled
+                >
+                    &rarr;
+                </button>
+                <a id="download_file" href="#" download class="btn">
+                    <p>Download</p>
+                </a>
+            </div>
 
-        <div
-            style="
-                width: 100%;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                flex-direction: row;
-                column-gap: 0.5rem;
-            "
-        >
-            <input type="file" id="upload_file" />
+            <textarea
+                id="sas_content"
+                rows="10"
+                cols="60"
+                autocomplete="off"
+                style="display: none"
+            ></textarea>
 
-            <!-- Text content of buttons change onclick -->
-            <button id="enable_causal_links">Enable Causal Links</button>
-            <button id="enable_merging">Enable Merging</button>
-            <button id="enable_fact_based">Disable Fact-based</button>
-            <button id="enable_forward_pass">Enable Forward Pass</button>
-            <button id="enable_loop">Enable Loop</button>
-
-            <button id="visualize_back" disabled hidden></button>
-            <button id="visualize" disabled>Visualize</button>
-
-            <a id="download_file" href="#" download class="anchor-as-button"
-                >Download</a
-            >
+            <div class="visualization-area">
+                <div class="network-container">
+                    <canvas
+                        id="networkCanvas"
+                        width="1000"
+                        height="600"
+                    ></canvas>
+                </div>
+                <div class="details-panel">
+                    <div class="textContainer">
+                        <h3>Layer Information</h3>
+                        <div class="grayText" id="layerStatus">
+                            No data loaded
+                        </div>
+                    </div>
+                    <div class="textContainer">
+                        <h3>Node Details</h3>
+                        <div class="grayText" id="nodeDetails">
+                            Click on a node to see details
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-
-        <textarea
-            id="sas_content"
-            rows="10"
-            cols="60"
-            autocomplete="off"
-            style="display: none"
-        ></textarea>
-
-        <div id="nodeDetails" style="width: 500"></div>
-
-        <div id="container"></div>
     </body>
 </html>
