--- a/index.html
+++ b/index.html
@@ -1,69 +1,313 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <meta charset="utf-8" />
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Task Scoping</title>
         <script type="text/javascript" src="brython.js"></script>
         <script type="text/javascript" src="brython_stdlib.js"></script>
-        <script src="d3.js"></script>
-    </head>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.8.5/d3.min.js"></script>
+        <style>
+            body {
+                font-family: Arial, sans-serif;
+                margin: 0;
+                padding: 0;
+                background-color: white;
+                width: 100vw;
+                min-height: 100vh;
+            }
 
-    <body
-        onload="brython(1)"
-        style="
-            width: 100vw;
-            min-height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: flex-start;
-            flex-direction: column;
-            row-gap: 1rem;
-            padding: 1rem;
-            overflow-x: hidden;
-        "
-    >
-        <script type="text/python">
-            import main
-            main.main()
-        </script>
-        <script type="module" src="main.js"></script>
+            h1,
+            h2,
+            h3,
+            h4,
+            h5,
+            h6,
+            p,
+            a,
+            label {
+                margin: 0;
+                padding: 0;
+                font-size: 0.8rem;
+            }
 
-        <div
-            style="
+            .container {
                 width: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+            }
+
+            .controls {
+                width: 100%;
+                padding: 1rem 0;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                gap: 0.5rem;
+            }
+
+            .btn {
                 display: flex;
                 align-items: center;
                 justify-content: center;
-                flex-direction: row;
+                background-color: #2196f3;
+                color: white;
+                border: none;
+                padding: 0.5rem 1rem;
+                border-radius: 0.5rem;
+                cursor: pointer;
+                transition: all 0.3s ease;
+                box-shadow: 0 2px 10px rgba(102, 126, 234, 0.3);
+                text-decoration: none;
+            }
+
+            .btn:hover {
+                background-color: #2175f3;
+            }
+
+            .btn:disabled {
+                background: #ccc;
+                cursor: not-allowed;
+                transform: none;
+                box-shadow: none;
+            }
+
+            .visualization-area {
+                padding: 1rem;
+                display: flex;
+                gap: 1rem;
+            }
+
+            .network-container {
+                flex: 1;
+                position: relative;
+            }
+
+            canvas {
+                border: 1px solid #e0e0e0;
+                border-radius: 0.5rem;
+                background: #fafafa;
+                box-shadow: inset 0 2px 10px rgba(0, 0, 0, 0.05);
+            }
+
+            .details-panel {
+                display: flex;
+                justify-content: start;
+                align-content: center;
+                flex-direction: column;
+                row-gap: 1rem;
+                width: 300px;
+                background: #fafafa;
+                border-radius: 0.5rem;
+                padding: 1rem;
+                border: 1px solid #e0e0e0;
+                overflow-y: auto;
+            }
+
+            .details-panel h3 {
+                width: 100%;
+                margin-top: 0;
+                color: #333;
+                border-bottom: 1px solid #2196f3;
+            }
+
+            .textContainer {
+                width: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: start;
+                flex-direction: column;
+                row-gap: 0.5rem;
+            }
+
+            .grayText {
+                font-size: 0.8rem;
+                color: #666;
+            }
+
+            input[type="file"] {
+                display: none;
+            }
+
+            .switchContainer {
+                all: unset;
+                display: flex;
+                align-items: center;
+                justify-content: center;
                 column-gap: 0.5rem;
-            "
-        >
-            <input type="file" id="upload_file" />
+                font-size: 0.8rem;
+            }
 
-            <!-- Text content of buttons change onclick -->
-            <button id="enable_causal_links">Enable Causal Links</button>
-            <button id="enable_merging">Enable Merging</button>
-            <button id="enable_fact_based">Disable Fact-based</button>
-            <button id="enable_forward_pass">Enable Forward Pass</button>
-            <button id="enable_loop">Enable Loop</button>
+            .switch {
+                position: relative;
+                display: inline-block;
+                width: 50px;
+                height: 23px;
+            }
 
-            <button id="visualize_back" disabled hidden></button>
-            <button id="visualize" disabled>Visualize</button>
+            .switch input {
+                opacity: 0;
+                width: 0;
+                height: 0;
+            }
 
-            <a id="download_file" href="#" download class="anchor-as-button"
-                >Download</a
-            >
+            .slider {
+                position: absolute;
+                cursor: pointer;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                background-color: #ccc;
+                -webkit-transition: 0.4s;
+                transition: 0.4s;
+            }
+
+            .slider:before {
+                position: absolute;
+                content: "";
+                height: 15px;
+                width: 15px;
+                left: 4px;
+                bottom: 4px;
+                background-color: white;
+                -webkit-transition: 0.4s;
+                transition: 0.4s;
+            }
+
+            input:checked + .slider {
+                background-color: #2196f3;
+            }
+
+            input:focus + .slider {
+                box-shadow: 0 0 1px #2196f3;
+            }
+
+            input:checked + .slider:before {
+                -webkit-transform: translateX(26px);
+                -ms-transform: translateX(26px);
+                transform: translateX(26px);
+            }
+
+            .slider.round {
+                border-radius: 20px;
+            }
+
+            .slider.round:before {
+                border-radius: 50%;
+            }
+        </style>
+    </head>
+    <body onload="brython(1)">
+        <script type="text/python">
+            import main
+        </script>
+        <script src="main.js"></script>
+        <div class="container">
+            <div class="controls">
+                <label for="upload_file" class="btn">Upload SAS</label>
+                <input
+                    type="file"
+                    id="upload_file"
+                    class="upload"
+                    accept=".sas"
+                />
+                <button id="start" onclick="load()" disabled class="btn">
+                    Start
+                </button>
+                <button
+                    id="prev"
+                    onclick="stepBack()"
+                    disabled
+                    class="btn"
+                    style="display: none"
+                >
+                    &larr;
+                </button>
+                <button
+                    id="next"
+                    onclick="stepForward()"
+                    disabled
+                    class="btn"
+                    style="display: none"
+                >
+                    &rarr;
+                </button>
+                <a id="download_file" href="#" download class="btn">
+                    <p>Download</p>
+                </a>
+            </div>
+
+            <textarea
+                id="sas_content"
+                rows="10"
+                cols="60"
+                autocomplete="off"
+                style="display: none"
+            ></textarea>
+
+            <div class="visualization-area">
+                <div class="network-container">
+                    <canvas
+                        id="networkCanvas"
+                        width="1000"
+                        height="600"
+                    ></canvas>
+                </div>
+                <div class="details-panel">
+                    <div class="textContainer">
+                        <h3>Scoping Options</h3>
+                        <div class="switchContainer">
+                            <label id="enable_causal_links" class="switch">
+                                <input type="checkbox" />
+                                <span class="slider round"></span>
+                            </label>
+                            <p>Causal Links</p>
+                        </div>
+
+                        <div class="switchContainer">
+                            <label id="enable_merging" class="switch">
+                                <input type="checkbox" />
+                                <span class="slider round"></span>
+                            </label>
+                            <p>Merging</p>
+                        </div>
+
+                        <div class="switchContainer">
+                            <label id="enable_fact_based" class="switch">
+                                <input type="checkbox" checked />
+                                <span class="slider round"></span>
+                            </label>
+                            <p>Fact-based</p>
+                        </div>
+
+                        <div class="switchContainer">
+                            <label class="switch" onclick="isLoad = true">
+                                <input
+                                    type="checkbox"
+                                    id="enable_forward_pass"
+                                />
+                                <span class="slider round"></span>
+                            </label>
+                            <p>Forward Pass</p>
+                        </div>
+
+                        <div class="switchContainer">
+                            <label id="enable_loop" class="switch">
+                                <input type="checkbox" />
+                                <span class="slider round"></span>
+                            </label>
+                            <p>Loop</p>
+                        </div>
+                    </div>
+                    <div class="textContainer" id="nodeDetails">
+                        <h3>Node Details</h3>
+                        <p class="grayText">Click on a node to see details</p>
+                    </div>
+                </div>
+            </div>
         </div>
-
-        <textarea
-            id="sas_content"
-            rows="10"
-            cols="60"
-            autocomplete="off"
-            style="display: none"
-        ></textarea>
-
-        <div id="nodeDetails" style="width: 500"></div>
-
-        <div id="container"></div>
     </body>
 </html>
